FIX: Resolve Stretch Alignment CSS; Bump version to 1.0.2

--- a/assets/css/bodyloom-dynamic-icon-list.css
+++ b/assets/css/bodyloom-dynamic-icon-list.css
@@ -62,7 +62,8 @@
 
 .bodyloom-widget-icon-list-item-text-wrap {
     display: flex;
-    align-items: center
+    align-items: center;
+    width: 100%;
 }
 
 .bodyloom-widget-icon-list-item-icon {
@@ -353,7 +354,8 @@
 }
 
 .bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-align-stretch .bodyloom-widget-icon-list-item:not(.active-link-item),
-.bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-align-stretch .bodyloom-widget-icon-list-item>a {
+.bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-align-stretch .bodyloom-widget-icon-list-item>a,
+.bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-align-stretch .bodyloom-widget-icon-list-item-text-inner {
     justify-content: space-between
 }
 
@@ -445,7 +447,8 @@
     }
 
     .bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-tablet-align-stretch .bodyloom-widget-icon-list-item:not(.active-link-item),
-    .bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-tablet-align-stretch .bodyloom-widget-icon-list-item>a {
+    .bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-tablet-align-stretch .bodyloom-widget-icon-list-item>a,
+    .bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-tablet-align-stretch .bodyloom-widget-icon-list-item-text-inner {
         justify-content: space-between
     }
 
@@ -538,7 +541,8 @@
     }
 
     .bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-mobile-align-stretch .bodyloom-widget-icon-list-item:not(.active-link-item),
-    .bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-mobile-align-stretch .bodyloom-widget-icon-list-item>a {
+    .bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-mobile-align-stretch .bodyloom-widget-icon-list-item>a,
+    .bodyloom-widget-icon-list.bodyloom-widget-layout-row.bodyloom-widget-mobile-align-stretch .bodyloom-widget-icon-list-item-text-inner {
         justify-content: space-between
     }
 
